# birminghack-bot

./: Dockerfile  config-example.yaml  docker-compose.yaml  main.py  pyproject.toml  requirements.txt
stubs/discord/: utils.pyi
